2009-11-12  H.J. Lu  <hongjiu.lu@intel.com>

	* i386-gen.c (opcode_modifiers): Add IsLockable.

	* i386-opc.h (IsLockable): New.
	(i386_opcode_modifier): Add islockable.

	* i386-opc.tbl: Add IsLockable to add, adc, and, btc, btr,
	bts, cmpxchg, cmpxch8b, dec, inc, neg, not, or, sbb, sub,
	xor, xadd and xchg.
	* i386-tbl.h: Regenerated.

2009-11-12  Daniel Jacobowitz  <dan@codesourcery.com>

	* arm-dis.c (coprocessor_opcodes): Use %A instead of %C.  Remove
	generic coprocessor instructions for FPA loads and stores.
	(print_insn_coprocessor): Remove %C support.  Display address for
	PC-relative offsets in %A.

2009-11-11  H.J. Lu  <hongjiu.lu@intel.com>

	* i386-dis.c (all_prefixes): New.
	(ckprefix): Set all_prefixes.
	(print_insn): Print all_prefixes instead of lock_prefix,
	repz_prefix, repnz_prefix, addr_prefix and data_prefix.

2009-11-11  Nick Clifton  <nickc@redhat.com>

	PR binutils/10924
	* arm-dis.c (UNPREDICTABLE_INSTRUCTION): New macro.
	(print_insn_arm): Extend %s format control code to check for
	unpredictable addressing modes.  Add support for %S format control
	code which suppresses this check.
	(W_BIT, I_BIT, U_BIT, P_BIT): New macros.
	(WRITEBACK_BIT_SET, IMMEDIATE_BIT_SET, NEGATIVE_BIT_SET,
	PRE_BIT_SET): New macros.
	(print_insn_coprocessor): Use the new macros instead of magic
	constants.
	(print_arm_address): Likewise.
	(pirnt_insn_arm): Likewise.
	(print_insn_thumb32): Likewise.

2009-11-11  Nick Clifton  <nickc@redhat.com>

	* po/id.po: Updated Indonesian translation.

2009-11-10  Maxim Kuvyrkov  <maxim@codesourcery.com>

	* m68k-dis.c (print_insn_arg): Handle RGPIOBAR, ACR[4-7] and MBAR[01].

2009-11-06  Sebastian Pop  <sebastian.pop@amd.com>

	* i386-dis.c (reg_table): Add XOP_8F_TABLE (XOP_09) to
	reg_table[REG_8F][1]: for XOP instructions, ModRM.reg first points to
	B.mm in the RXB.mmmmm byte, and so when B is set, we still should use
	the xop_table.
	(get_valid_dis386): Removed unused condition (from cut/n/paste) for
	XOP instructions.
